k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eshop
  labels:
    name: eshop
    app: eshop-webforms
